<resources>
    <string name="app_name">Puzzle Game</string>
    <string name="start_game">Start Game</string>
    <string name="Btn1">1</string>
    <string name="Btn2">2</string>
    <string name="Btn3">3</string>
    <string name="Btn4">4</string>
    <string name="Btn5">5</string>
    <string name="Btn6">6</string>
    <string name="Btn7">7</string>
    <string name="Btn8">8</string>
    <string name="Btn9">9</string>
    <string name="Btn10">10</string>
    <string name="Btn11">11</string>
    <string name="Btn12">12</string>
    <string name="Btn13">13</string>
    <string name="Btn14">14</string>
    <string name="Btn15">15</string>
    <string name="Btn16">16</string>
    <string name="steps_0">Steps: 0</string>
    <string name="time_00_00_00">Time: 00:00:00</string>
    <string name="shuffle">Shuffle</string>
    <string name="stop">Stop</string>
    <string name="last_step_count">Last Step Count</string>
</resources>