<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bgm" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:orientation="horizontal">
    
    <TextView
        android:id="@+id/stepsView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="19sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/steps_0"/>
    <TextView
        android:id="@+id/timerView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="19sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/time_00_00_00"/>
</LinearLayout>
<RelativeLayout
    android:id="@+id/group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <Button
        android:id="@+id/btn1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:tag="00"
        android:text="@string/Btn1"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn1"
        android:tag="01"
        android:text="@string/Btn2"
        android:layout_toRightOf="@+id/btn1" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn2"
        android:tag="02"
         android:text="@string/Btn3"
        android:layout_toRightOf="@+id/btn2" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn3"
        android:tag="03"
        android:text="@string/Btn4"
        android:layout_toRightOf="@+id/btn3" />


    <Button
        android:id="@+id/btn5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn1"
        android:tag="10"
        android:text="@string/Btn5" />
    <Button
        android:id="@+id/btn6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
      android:layout_below="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:tag="11"
        android:text="@string/Btn6"
        android:layout_toRightOf="@+id/btn1" />
    <Button
        android:id="@+id/btn7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn1"
        android:layout_toEndOf="@+id/btn2"
        android:tag="12"
        android:text="@string/Btn7"
        android:layout_toRightOf="@+id/btn2" />
    <Button
        android:id="@+id/btn8"
        android:layout_width="65dp"
        android:textColor="@color/colorWhite"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
      android:layout_below="@+id/btn1"
        android:layout_toEndOf="@+id/btn3"
        android:tag="13"
        android:text="@string/Btn8"
        android:layout_toRightOf="@+id/btn3" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn5"
        android:tag="20"
        android:text="@string/Btn9" />
    <Button
        android:id="@+id/btn10"
        android:layout_width="65dp"
        android:textColor="@color/colorWhite"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn5"
        android:layout_toEndOf="@+id/btn5"
        android:tag="21"
        android:text="@string/Btn10"
        android:layout_toRightOf="@+id/btn1" />
    <Button
        android:id="@+id/btn11"
        android:layout_width="65dp"
        android:textColor="@color/colorWhite"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn5"
        android:layout_toEndOf="@+id/btn2"
        android:tag="22"
        android:text="@string/Btn11"
        android:layout_toRightOf="@+id/btn2" />
    <Button
        android:id="@+id/btn12"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn5"
        android:layout_toEndOf="@+id/btn3"
        android:tag="23"
        android:text="@string/Btn12"
        android:layout_toRightOf="@+id/btn3" />

    <Button
        android:id="@+id/btn13"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn9"
        android:tag="30"
        android:text="@string/Btn13" />
    <Button
        android:id="@+id/btn14"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn5"
        android:tag="31"
        android:text="@string/Btn14"
        android:layout_toRightOf="@+id/btn1" />
    <Button
        android:id="@+id/btn15"
        android:layout_width="65dp"
        android:textColor="@color/colorWhite"
        android:layout_height="65dp"
        android:onClick="buttonClick"
        android:backgroundTint="@color/colorAccentDark"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn2"
        android:tag="32"
        android:text="@string/Btn15"
        android:layout_toRightOf="@+id/btn2" />
    <Button
        android:id="@+id/btn16"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:textColor="@color/colorWhite"
        android:onClick="buttonClick"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn3"
        android:tag="33"
        android:text="@string/Btn16"
        android:layout_toRightOf="@+id/btn3"
        android:background="@color/colorFreeButton"/>

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ShuffleBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shuffle"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccentDark"/>

        <Button
            android:id="@+id/StopBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccentDark"/>
    </LinearLayout>
</FrameLayout>